--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     box-sizing: border-box;
 }
 
-body{
+#wrapper{
+    min-width: 400px;
+    margin: 0 auto;
     font-family: 'Mulish', sans-serif;
 }
 
@@ -14,7 +16,7 @@ body{
     padding-left: 2rem;
     padding-right: 2rem;
     padding-bottom: 5px;
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -40,6 +42,7 @@ ul{
 
 h1{
     color: white;
+    font-size: 1.25rem;
     padding-left: 20px;
 }
 
